Fixed page Y overflow issue, added comments to some stylesheets, reworked sizing of earthquake card inner elements to fix arbitrary horizontal placement based on text sizing

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,9 @@
 @import './styling/resources.scss';
 
 @media (max-width: 500px) {
-  .App { width: 100vw; }
+  .App { 
+    width: 100%;
+   }
   .Wipe { display: none; }
 }
 
