--- a/src/styling/activity/activity.scss
+++ b/src/styling/activity/activity.scss
@@ -1,9 +1,3 @@
-@import './card.scss';
-@import './filters.scss';
-@import './sort.scss';
-
-.earthquake-list-container{
-    margin-top: 78px;
-    width:100%;
-    display: block;
-}
+@import "./card.scss";
+@import "./filters.scss";
+@import "./sort.scss";
