--- a/src/styling/header.scss
+++ b/src/styling/header.scss
@@ -77,7 +77,8 @@
       }
     }
     .search-icon {
-      background: url("../images/search-white.svg") no-repeat center center / contain;
+      background: url("../images/search-white.svg") no-repeat center center /
+        contain;
     }
   }
 }
